# libro-aventuras-de-conocimiento

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: revision-ortografia-redaccion.yml
data/: contexto-autor.md  esquema-capitulos.yml  fichas-documentales.yml  indice-libro.yml  inventario-repos.yml  lineas-narrativas.yml  revision-estilo-capitulos.yml  revision-tecnica-capitulos.yml
data/processed/: topics.csv
docs/: book-outline.md  capitulo-1-cartografia-datos.md  capitulo-2-proposito-alcance.md  instrucciones-redaccion.md  iteracion-10-revision-capitulos.md  iteracion-11-aplicar-revisiones.md  iteracion-12-ensamblado-libro.md  iteracion-9-plantilla.md  pandoc-common.yaml  pandoc-epub.yaml  pandoc-pdf.yaml
docs/styles/: epub.css
docs/templates/: book-metadata.yaml  chapter-template.md  preamble.tex
libro/: README.md
libro/prologo/: frase-resumen.md  ideas-centrales.md  prologo.md  tipo-de-libro.md
manuscrito/: cap-01.md  cap-02.md  cap-03.md  cap-04.md  prologo.md
notebooks/: analysis.ipynb
reports/: casos-estudio-guiones.md
reports/case-studies/: activity-peaks-2025-W47.md
reports/tables/: kpis_resumen.csv  kpis_resumen.md  textos_por_fuente.csv  textos_por_fuente.md  textos_por_periodo.csv  textos_por_periodo.md  textos_por_tema.csv  textos_por_tema.md
scripts/: build_book.sh  clean_data.py  derive_kpis.py  generate_topics.py
tools/: repo_harvester.py
